--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -1,10 +1,10 @@
 h1 {
-	color: aquamarine;
+	color: navy;
 	text-align: center;
 	font-size: 40px;
 }
 h2 {
-	color: pink;
+	color: maroon;
 	text-align: center;
 	font-size: 30px;
 }
@@ -29,8 +29,8 @@ body {
 	top:5px
 }
 #titlebar {
-	border: 2px solid black;
-	background-color: black;
+	border: 2px solid grey;
+	background-color: grey;
 	height: 40px;
 }
 a {
