--- a/homestyle.css
+++ b/homestyle.css
@@ -1,6 +1,6 @@
 h1 {
 	font-family: garamond;
-	color: aquamarine;
+	color: navy;
 	text-align: center;
 	font-size: 40px;
 }
@@ -9,6 +9,14 @@ h2 {
 	text-align: center;
 	font-size: 30px;
 }
+
+.img-vienna {
+	width: 400px;
+	background-image: url(img/melk.jpg);
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
 p {
 	text-align: justify;
 }
