--- a/homestyle.css
+++ b/homestyle.css
@@ -10,7 +10,7 @@ h2 {
 	font-size: 30px;
 }
 
-.img-vienna {
+.img-ae {
 	width: 400px;
 	background-image: url(img/melk.jpg);
 	background-size: contain;
