--- a/README.css
+++ b/README.css
@@ -1,1 +1,7 @@
 README.css
+Html, body {
+  background-image: url('Documents/GitHub/anaelissa.info/img/peaches.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} 
