--- a/homestyle.css
+++ b/homestyle.css
@@ -1,3 +1,11 @@
+README.css
+Html, body {
+  background-image: url('Documents/GitHub/anaelissa.info/img/peaches.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} 
+
 h1 {
 	font-family: garamond;
 	color: navy;
