--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -12,7 +12,7 @@ p {
 	text-align: justify;
 }
 body {
-	background-color: #e5e1ae;
+	background-color: #FFDAB9;
 }
 #homebutton {
 	position: relative;
@@ -29,8 +29,8 @@ body {
 	top:5px
 }
 #titlebar {
-	border: 2px solid grey;
-	background-color: grey;
+	border: 2px solid: #FFDAB9;
+	background-color: #FFDAB9;
 	height: 40px;
 }
 a {
