--- a/homestyle.css
+++ b/homestyle.css
@@ -1,14 +1,6 @@
-README.css
-Html, body {
-  background-image: url('Documents/GitHub/anaelissa.info/img/peaches.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-} 
-
 h1 {
 	font-family: garamond;
-	color: navy;
+	color: black;
 	text-align: center;
 	font-size: 40px;
 }
@@ -33,26 +25,32 @@ body {
 }
 #homebutton {
 	position: relative;
+	text-align: center;
 	line-height: 1cm;
 }
 #contactbutton {
 	position: relative;
+	text-align: center;
 	line-height: 1cm;
 }
 #titleimg {
 	float: left;
 	height: 30px;
 	position: relative;
+	text-align: center;
 	top:5px
 }
 #titlebar {
-	border: 2px solid grey;
-	background-color: grey;
+	border: 2px pink;
+	background-color: pink;
+	text-align: center;
 	height: 40px;
 }
 a {
 	padding: 14px;
+	text-align: center;
 }
 a, .titlebar {
 		color: white;
+		text-align: center;
 }
