--- a/README.css
+++ b/README.css
@@ -41,8 +41,8 @@ body {
 	top:5px
 }
 #titlebar {
-	border: 2px pink;
-	background-color: pink;
+	border: 2px black;
+	background-color: black;
 	text-align: center;
 	height: 40px;
 }
