--- a/poetrystyle.css
+++ b/poetrystyle.css
@@ -1,13 +1,21 @@
 h1 {
-	color: navy;
+	font-family: garamond;
+	color: black;
 	text-align: center;
 	font-size: 40px;
 }
 h2 {
-	color: maroon;
+	color: black;
 	text-align: center;
 	font-size: 30px;
 }
+
+.img-ae {
+	width: 400px;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
 p {
 	text-align: justify;
 }
@@ -16,26 +24,32 @@ body {
 }
 #homebutton {
 	position: relative;
+	text-align: center;
 	line-height: 1cm;
 }
 #contactbutton {
 	position: relative;
+	text-align: center;
 	line-height: 1cm;
 }
 #titleimg {
 	float: left;
 	height: 30px;
 	position: relative;
+	text-align: center;
 	top:5px
 }
 #titlebar {
-	border: 2px solid grey;
-	background-color: grey;
+	border: 2px pink;
+	background-color: pink;
+	text-align: center;
 	height: 40px;
 }
 a {
 	padding: 14px;
+	text-align: center;
 }
 a, .titlebar {
 		color: white;
+		text-align: center;
 }
