--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,4 +1,6 @@
-h1 {
+
+
+ h1 {
 	font-family: garamond;
 	color: black;
 	text-align: center;
@@ -19,9 +21,11 @@ h2 {
 p {
 	text-align: justify;
 }
+
 body {
-	background-color: #e5e1ae;
+	background-color: white;
 }
+
 #homebutton {
 	position: relative;
 	text-align: center;
@@ -50,6 +54,8 @@ a {
 	text-align: center;
 }
 a, .titlebar {
-		color: white;
-		text-align: center;
+		color: black;
+		text-align: center
+		font-weight: bold;
+		font-family: fantasy; ;
 }
