--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -40,8 +40,8 @@ body {
 	top:5px
 }
 #titlebar {
-	border: 2px pink;
-	background-color: pink;
+	border: 2px blue;
+	background-color: blue;
 	text-align: center;
 	height: 40px;
 }
