--- a/css/poetryart.css
+++ b/css/poetryart.css
@@ -12,8 +12,8 @@ h2 {
 
 .img-ae {
 	width: 400px;
-	background-size: contain;
-	background-repeat: no-repeat;
+	/*background-size: contain;>*/
+	
 }
 
 p {
