--- a/css/README.css
+++ b/css/README.css
@@ -7,11 +7,14 @@ body {
 
 
 h1 {
-	font-family: garamond;
+	font-family: cursive;
 	color: black;
 	text-align: center;
-	font-size: 40px;
+	position: bottom; 
+	
+
 }
+
 h2 {
 	color: black;
 	text-align: center;
