what  d id i do

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,3 +1,61 @@
+/* Animation Basics */
+
+body {
+	backgroud-color: #D8E8FA;
+
+}
+
+.wrapper {
+	margin: 2em auto 2em auto;
+	width:350px;
+	position:relative;
+}
+
+.blue_robot {
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 h1 {
 	font-family: garamond;
 	color: black;
