edited readme page
no repeat background images, changed color of bar?

--- a/css/README.css
+++ b/css/README.css
@@ -39,7 +39,7 @@ h2 {
 }
 #startbar {
 	border: 2px black;
-	background-color: black;
+	background-color: maroon;
 	text-align: center;
 	height: 40px;
 	width: 100px;
