--- a/css/README.css
+++ b/css/README.css
@@ -1,26 +1,30 @@
-body {
-	background-image: url('img/meatun.JPEG'); 
-	border-top: 5px solid black; 
-	border-bottom: 5px solid black; 
-	border-bottom: 5px solid black;
-}
-
-
 h1 {
-	font-family: cursive;
+	font-family: garamond;
 	color: black;
 	text-align: center;
-	position: bottom; 
-	
+	font-size: 40px;
 }
-
 h2 {
 	color: black;
 	text-align: center;
 	font-size: 30px;
 }
 
-#startbutton {
+.img-ae {
+	width: 400px;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+p {
+	text-align: justify;
+}
+
+body {
+	background: white;
+}
+
+#homebutton {
 	position: relative;
 	text-align: center;
 	line-height: 1cm;
@@ -37,20 +41,20 @@ h2 {
 	text-align: center;
 	top:5px
 }
-#startbar {
-	border: 2px black;
-	background-color: maroon;
+#titlebar {
+	border: 2px red;
+	background-color: red;
 	text-align: center;
 	height: 40px;
-	width: 100px;
-	position: relative;
-	left: 575px;
 }
 a {
 	padding: 14px;
 	text-align: center;
 }
-a, .startbar {
+a, .titlebar {
 		color: white;
-		text-align: center;
+		text-align: center
+		font-weight: bold;
+		font-family: garamond; ;
 }
+
