edited readme, grad pic, fixed

--- a/css/README.css
+++ b/css/README.css
@@ -43,7 +43,7 @@ body {
 }
 #titlebar {
 	border: 2px blue;
-	background-color: orange;
+	background-color: darkorange;
 	text-align: center;
 	height: 40px;
 }
