--- a/css/README.css
+++ b/css/README.css
@@ -43,7 +43,7 @@ body {
 }
 #titlebar {
 	border: 2px blue;
-	background-color: darkorange;
+	background-color: silver;
 	text-align: center;
 	height: 40px;
 }
@@ -52,7 +52,7 @@ a {
 	text-align: center;
 }
 a, .titlebar {
-		color: white;
+		color: black;
 		text-align: center
 		font-weight: bold;
 		font-family: garamond; ;
