--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -20,7 +20,7 @@ p {
 	text-align: justify;
 }
 body {
-	background-color: #e5e1ae;
+	background-color: white;
 }
 #homebutton {
 	position: relative;
@@ -41,7 +41,7 @@ body {
 }
 #titlebar {
 	border: 2px blue;
-	background-color: blue;
+	background-color: silver;
 	text-align: center;
 	height: 40px;
 }
@@ -50,7 +50,7 @@ a {
 	text-align: center;
 }
 a, .titlebar {
-		color: white;
+		color: black;
 		text-align: center;
 }
 
