--- a/css/gallerystyle.css
+++ b/css/gallerystyle.css
@@ -38,7 +38,7 @@ body {
 }
 #titlebar {
 	border: 2px pink;
-	background-color: pink;
+	background-color: silver;
 	text-align: center;
 	height: 40px;
 }
