wow what didn't i do...
I added my own logo, to every page. made it mobile friendly. i remodeled my adventures page into my badm320 class. i changed thebackground of a few pages. I totally remodeled the Home page. Changed the font to everything to match my logo font. added some pictures here and there. added emojis to the title bar. made this website way more appealing to users.

--- a/css/adventures.css
+++ b/css/adventures.css
@@ -1,11 +1,11 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
 }
 h2 {
-	font-family: fantasy;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 50px;
@@ -44,7 +44,8 @@ body {
 }
 #titlebar {
 	border: 2px pink;
-	background-color: #b7d076;
+	/**background-color: #b7d076;**/
+	background-color: silver;
 	text-align: center;
 	height: 40px;
 }
@@ -56,5 +57,5 @@ a, .titlebar {
 		color: black;
 		text-align: center
 		font-weight: bold;
-		font-family: fantasy; ;
+		font-family: copperplate;
 }
