--- a/css/README.css
+++ b/css/README.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
@@ -55,6 +55,6 @@ a, .titlebar {
 		color: black;
 		text-align: center
 		font-weight: bold;
-		font-family: garamond; ;
+		font-family: copperplate;
 }
 
