--- a/css/aboutmestyle.css
+++ b/css/aboutmestyle.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
@@ -8,6 +8,7 @@ h2 {
 	color: black;
 	text-align: center;
 	font-size: 30px;
+	font-family: copperplate;
 }
 
 .img-ae {
@@ -41,7 +42,7 @@ body {
 }
 #titlebar {
 	border: 2px blue;
-	background-color: silver;
+	background-color: pink;
 	text-align: center;
 	height: 40px;
 }
