--- a/css/arts.css
+++ b/css/arts.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
@@ -8,6 +8,7 @@ h2 {
 	color: black;
 	text-align: center;
 	font-size: 30px;
+	font-family: copperplate;
 }
 
 .img-ae {
@@ -56,5 +57,5 @@ a, .titlebar {
 		color: black;
 		text-align: center
 		font-weight: bold;
-		font-family: fantasy; ;
+		font-family: copperplate;
 }
