--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
@@ -37,7 +37,7 @@ body {
 }
 #titlebar {
 	border: 2px pink;
-	background-color: silver;
+	background-color: pink;
 	text-align: center;
 	height: 40px;
 }
@@ -49,5 +49,5 @@ a, .titlebar {
 		color: black;
 		text-align: center
 		font-weight: bold;
-		font-family: fantasy; ;
+		font-family: copperplate; ;
 }
