--- a/css/gallerystyle.css
+++ b/css/gallerystyle.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: garamond;
+	font-family: copperplate;
 	color: black;
 	text-align: center;
 	font-size: 40px;
@@ -50,5 +50,5 @@ a, .titlebar {
 		color: black;
 		text-align: center
 		font-weight: bold;
-		font-family: fantasy; ;
+		font-family: copperplate;
 }
