--- a/css/README.css
+++ b/css/README.css
@@ -1,60 +1,327 @@
-h1 {
-	font-family: copperplate;
-	color: black;
-	text-align: center;
-	font-size: 40px;
-}
-h2 {
-	color: black;
-	text-align: center;
-	font-size: 30px;
+
+*
+{ 
+	margin: 0;
+	padding: 0;
+ }
+
+ body
+ {
+ 	background-color: #f1f3f4;
+ 	font-family: times;
+ }
+
+ .top-nav-bar
+ {
+ 	height: 57px;
+ 	top: 0px;
+ 	position: sticky;
+ 	background: #fff;
+ 	margin-bottom: 20px;
+ 	border-bottom: 3px solid red !important;
+ 	z-index: 2;
+ }
+
+ .logo
+ {
+ 	width: 15%;
+ 	height: 15%;
+ }
+
+
+.form-control
+{
+	margin-top: 9px;
+	margin-left: 30px;
+	border: 1px solid hotpink !important;
+	border-top-left-radius: 20px !important;
+	border-bottom-left-radius: 20px !important;
+	border-top-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+	box-shadow: none !important;
 }
 
-.img-ae {
-	width: 400px;
-	background-size: contain;
-	background-repeat: no-repeat;
+.input-group-text
+{
+	background: red !important;
+	border: 1px solid red !important;
+	margin: 8.5px 10px 91px 0 !important;
+	border-top-left-radius: 0px !important;
+	border-bottom-left-radius: 0px !important;
+	border-top-right-radius: 20px !important;
+	border-bottom-right-radius: 20px !important;
+	cursor: pointer !important;
 }
 
-p {
-	text-align: justify;
+.search-box
+{
+	display: inline-flex;
+	width: 50%;
 }
 
-body {
-	background: white;
+.fa-search /*!changes color for icon>*/
+{
+	color: white;
 }
 
-#homebutton {
-	position: relative;
+.menu-bar
+{
+	width: 40%;
+	height: 57px;
+	float: right;
+
+}
+
+.menu-bar ul
+{
+	display: inline-flex;
+	float: right;
+}
+
+.menu-bar ul li
+{
+	border-left: 1px solid grey;
+	list-style-type: none;
+	padding: 15px 35px;
 	text-align: center;
-	line-height: 1cm;
+	background-color: black;
+	font-color: white;
+	cursor: pointer;
 }
-#contactbutton {
-	position: relative;
-	text-align: center;
-	line-height: 1cm;
+
+.menu-bar ul li a
+{
+	font-size: 16px;
+	font-weight: bold;
+	color: white;
+	text-decoration: none;
+	font-color: white;
 }
-#titleimg {
+
+.fa-shopping-basket
+{
+	margin-right: 5px;
+
+}
+
+@media only screen and (max-width: 980px)
+{
+	.top-nav-bar
+	{
+		height: 140px;
+		border-bottom: 0;
+	}
+	.search-box
+	{
+		width: 100%;
+	}
+	.menu-bar
+	{
+		width: 100%;
+	}
+	.menu-bar ul
+	{
+		margin: 10px 0;
+		width: 100%;
+	}
+	.menu-bar ul li
+	{
+		height: 100%;
+		width: 100%;
+	}
+	.logo
+	{
+		width: 20%;
+		height: 20%;
+	}
+	/*.input-group-text*/
+	{margin: 8.5px 10px 90px 0;
+	}
+
+}
+
+
+
+/*----------------Side Menu--------------------------*/
+
+.side-menu
+{
+	margin-top: 90px;
+	height: 950px;
+	width: 15%;
+	font-size: 20px;
 	float: left;
-	height: 30px;
-	position: relative;
-	text-align: center;
-	top:5px
+	z-index: 2;
+	background: grey;
 }
-#titlebar {
-	border: 2px blue;
-	background-color: silver;
-	text-align: center;
-	height: 40px;
+
+.side-menu ul /* add space from left side */
+{
+	margin-left: 20px;
+	margin-top: 100px;
 }
-a {
-	padding: 14px;
-	text-align: center;
+
+.side-menu ul li
+{
+	list-style-type: none;
+	font-weight: bold;
+	margin-top: 10px;
+	cursor: pointer;
+	color: white;
+
 }
-a, .titlebar {
-		color: black;
-		text-align: center
-		font-weight: bold;
-		font-family: copperplate;
+
+.side-menu ul li:hover
+{
+	color: hotpink;
 }
+
+
+
+.side-menu ul li ul
+{
+	display: none;
+	z-index: 10;
+	top: 77px;
+}
+
+.side-menu ul li:hover ul
+{
+	display: block;
+	height: 400px;
+	margin-left: 14%;
+	padding: 0 100px 10px 10px;
+	position: fixed;
+	background: #778899;
+	box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5);
+}
+
+.fa-fa-angle-right
+{
+	margin-top: 4px;
+	margin-right: 8px;
+	float: right;
+}
+
+#menu-btn,close-btn
+{
+	font-size: 30px;
+	margin: 10px;
+	color: red;
+	display: none;
+}
+
+
+@media only screen and (max-width: 980px)
+{
+	.side-menu
+	{
+	 width: 34%;
+	 z-index: 2px;
+	 top: 105px;
+	 position: fixed;
+	 font-size: 20px;
+	 background: grey;
+	 display: none;
+	}
+	.side-menu ul li ul
+	{
+		top: 133px;
+	}
+	.side-menu ul li:hover ul
+	{
+		margin-left: 30%;
+	}
+	#menu-btn
+	{
+		display: block;
+	}
+}
+
+/*------------- slider CSS----------- */
+
+.slider
+{
+	width: 80%;
+	margin-left: 15%;
+	padding: 1 10px;
+	position: fixed;
+}
+
+.carousel
+{
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+	transition: 0.5s;
+}
+
+
+.carousel-indicators
+{
+	z-index: 1 !important;
+	transition: 0.5s;
+	padding-bottom: 0px;
+	color: grey;
+}
+
+
+
+@media only screen and (max-width: 980px)
+{
+	.slider {
+		width: 100%;
+		margin-left: 0;
+	}
+}
+
+
+/*----------featured caregories CSS-------*/
+
+.featured-categories
+{
+	margin: 50px 0;
+}
+
+.featured-categories img
+{
+	width: 100%;
+	padding: 20px 0;
+	transition: 1s;
+	cursor: pointer;
+}
+
+.featured-categories img:hover
+{
+	transform: scale(1.1);
+}
+
+
+/*-----------------On Sale products----------------*/
+
+.title-box
+{
+	background: red;
+	color: black;
+	font-weight: bold;
+	font-size: 40px;
+	width: 450px;
+	padding: 8px 5px;
+	height: 45px;
+	margin-bottom: 30px;
+	display: flex;
+	position: absolute;
+	font-family: cursive;
+
+}
+
+
+@media only screen and (max-width: 980px)
+{
+	.title-box {
+		width: 70%;
+	}
+}
+
+
+
+
 
